compiler/acton/test/syntaxerrors/err16.act
# Invalid for loop syntax (missing 'in')
def loop():
    for x [1, 2, 3]:
        print(x)